--- a/ch2-BL/discussion/discussion.tex
+++ b/ch2-BL/discussion/discussion.tex
@@ -1,13 +1,14 @@
-\linespread{1.6}\selectfont
-
 \section{Discussion and Conclusions}
+
+- in WRF, soil water stress does not vary by vegetation type, but instead is a property of the soil type.  However, plant water stress points ($\theta_{ref}$ and $\theta_{wilt}$ in the Feddes terminology) are known to differ among species; models should incorporate vegetation-type-specific $\theta_{ref}$ and $\theta_{wilt}$  to represent more accurately the variation in plant water stress and response to drought.
+
 - state the magnitude of potential effect of species difference on T, Ts, humidity, PBL depth (for each model)
 
 - reiterate that these soil moisture values are typical for the dry season
 
 - magnitude of difference in temperature is large enough to matter for ..., but small compared to synoptic variability
 
-- which stomatal control - VPD or soil moisture - created the biggest difference between species?  had the biggest impact on boundary layer conditions?
+- uncertainty in VPD WRF parameters
 
 - compare the two models: slab ABL does not include effects of advection or subsidence, thus overestimates boundary layer height; even accounting for the effects of advection, complex topography, and subsidence in WRF, the hotter drier conditions of the Douglas-fir case are a robust result.
 
@@ -17,6 +18,6 @@
 
 - also, demonstrates the sensitivity of the boundary layer to stomatal dynamics, and underscores the importance of understanding species- and vegetation-type-differences in stomatal response to VPD and theta
 
-- mention that we’re not satisfied with this representation of the subsurface for this geological unit/region
+- mention that we are not satisfied with this representation of the subsurface for this geological unit/region
 
-- how Douglas fir suppressed transp might amplify hotter heat waves in future climate (cite Hansen paper on shift of temperature pdf?) – transpiration will not increase with increasing VPD, and soils may dry below DF threshold earlier in the summer
+- how Douglas fir suppressed transp might amplify hotter heat waves in future climate (cite Hansen paper on shift of temperature pdf?); transpiration will not increase with increasing VPD, and soils may dry below DF threshold earlier in the summer
