--- a/ch3-wind/tex/results/results.tex
+++ b/ch3-wind/tex/results/results.tex
@@ -27,7 +27,7 @@ We first characterize the differences in Solano turbine-level wind resulting fro
 
 \subsubsection{Model forcing and control case winds}
 
-Before presenting the Solano winds, we quantify the synoptic and land-surface-heating forcing in each case, and we characterize the control case winds.  The synoptic forcing, measured by wind speed at 500 hPa, varies little between the model runs (Figure \ref{fig:windSol_forcings}), and synoptic winds are weak on June 27 to July 5 and strong on July 6 to 11.  Soil moisture declines by $\le$ 0.02 m$^3$/m$^3$ before being reset each local midnight (Figure \ref{fig:windSol_forcings}).  In all three regions, land surface sensible heat flux is approximately 200 W/m$^2$ greater at midday with wet soil moisture (0.25) than dry soil moisture (0.1).
+Before presenting the Solano winds, we quantify the synoptic and land-surface-heating forcing in each case, and we characterize the control case winds.  The synoptic forcing, measured by wind speed at 500 hPa, varies little between the model runs (Figure \ref{fig:windSol_forcings}), and synoptic winds are weak on June 27 to July 5 and strong on July 6 to 11.  In all three regions, land surface sensible heat flux is approximately 200 W/m$^2$ greater at midday with wet soil moisture (0.25) than dry soil moisture (0.1).
 
 \begin{figure}[here]
 \includegraphics[width=1\textwidth]{ch3-wind/img/solano_wind_wetbkd_dryrg_d02_level0.png}
@@ -41,7 +41,7 @@ Before presenting the Solano winds, we quantify the synoptic and land-surface-he
 \label{fig:windSol_TseriesWetRg}
 \end{figure}
 
-In both the control and test cases, wind at Solano has a strong diurnal cycle (Figures \ref{fig:windSol_TseriesDryRg}(a) and \ref{fig:windSol_TseriesWetRg}(a)); the surface wind speed does not track the 500 hPa synoptic wind in this period (cf. Figure \ref{fig:windSol_forcings}).  Solano wind speeds are greatest between 19:00 and 03:00 and are weakest 08:00 to 13:00 (Figure \ref{fig:windSol_DiffDiurnalDryRg}(a) and Figure \ref{fig:windSol_DiffDiurnalWetRg}(a)). Solano winds are strongest in lowest 300 m, and the low-level peak is particularly pronounced at night (Figure \ref{fig:windSol_VertProfileDryRg}(a)).  The two-week average $u$-component of Solano wind ($u_{avg}$) is westerly at all heights and times, but at heights 300-1000 m the $v_{avg}$-component of the winds oscillates between northerly in night and morning to slightly southerly in afternoon and evening; below 300 m, $v_{avg}$ is southerly at all hours.
+In both the control and test cases, wind at Solano has a strong diurnal cycle (Figures \ref{fig:windSol_TseriesDryRg}(a) and \ref{fig:windSol_TseriesWetRg}(a)); the surface wind speed does not track the 500 hPa synoptic wind in this period (cf. Figure \ref{fig:windSol_forcings}).  Solano wind speeds are greatest at night (19:00 to 03:00) and weakest in the morning (08:00 to 13:00; Figure \ref{fig:windSol_DiffDiurnalDryRg}(a) and Figure \ref{fig:windSol_DiffDiurnalWetRg}(a)). Solano winds are strongest in the lowest 300 m, and the low-level peak is particularly pronounced at night (Figure \ref{fig:windSol_VertProfileDryRg}(a)).
 
 \begin{figure}[here]
 \begin{subfigure}{0.5\textwidth}
@@ -100,13 +100,11 @@ Regional low-level winds in the control case are consistent with previous studie
 
 \subsubsection{Regional sensitivity}
 
-The Solano wind in the regional test cases differs from the control case by as much as 2.5-3 m/s, and the changes are large on the days with the weakest upper level wind (June 27-29, Figures \ref{fig:windSol_TseriesDryRg} and \ref{fig:windSol_TseriesWetRg}). The largest changes occur when Central Valley soil moisture is perturbed (dryCV and wetCV).  
+The Solano wind in the regional test cases differs from the control case by as much as 2 m/s, and the largest changes occur when Central Valley soil moisture is perturbed (dryCV and wetCV).  
 
 Drier soils on a wet background increase Solano winds in the afternoon and evening relative to the all-wet control in all regional test cases (Figure \ref{fig:windSol_DiffDiurnalDryRg}(b)); the magnitude of this increase is largest in the dryCV case.  The increases in both the dryCV and drySN cases are greatest between 11:00 and 18:00 (0.8-1.8 m/s for dryCV and 0.25-0.8 m/s for drySN), while the increase in the dryCR case happens later, between 17:00 and 22:00 (0.25-1 m/s).  Importantly, increases in the afternoon cause the daily wind speed ramp-up to shift earlier, because the increases occur at the same time as the control ramp-up (Figure \ref{fig:windSol_DiffDiurnalDryRg}(a)).  Because there are no corresponding decreases at the hour of ramp-down, this means that the duration of the high-wind period also increases.  Predicting the timing of ramps is important for utilities, and these results suggest that soil moisture influences ramp-up timing at Solano.  Also, drier soils (especially in the Central Valley) increase the minimum wind (08:00 to 13:00) on many individual days (Figure \ref{fig:windSol_TseriesDryRg}), but the average increases in the minimum wind are not more than one standard deviation greater than zero in the two-week average diurnal cycle (Figure \ref{fig:windSol_DiffDiurnalDryRg}(b)).
 
 Wetter soils on a dry background cause winds to decrease relative to the all-dry control case, and the magnitudes of the decreases are similar to the magnitudes of the increases in the dry regional tests (Figure \ref{fig:windSol_DiffDiurnalWetRg}(b)).  Again, the decrease is largest in when Central Valley soil moisture is perturbed.  Both the wetCV and wetSN cases have wind decreases during 10:00-18:00 that are more than one standard deviation from zero (0.5-1.8 m/s for wetCV and 0.25-0.8 m/s for wetSN); for the wetCR case, there are no times of day with wind changes more than one standard deviation from zero, although there are weak decreases in the late afternoon and evening.
-
-The $u$-component of Solano wind increases at middle levels (500 m - 1000 m) in all dry regional test cases (Figure \ref{fig:windSol_VertProfileDryRg}(b)-(d)).  The  increase extends to the near-surface winds to a greater degree in the dryCV case than in the dryCR or drySN case.  The 500-1000 m wind speed increases are largest in the dryCV case and are especially greater than the dryCR and drySN increases in the night and morning.  Changes in $v$ tend to amplify the existing diurnal pattern, with more northerly winds in the night and morning and more southerly winds in the afternoon.
 
 The Solano wind changes occur in the context of larger regional wind and pressure changes (Figure \ref{fig:windSol_WindMapsRg}).  In all dry regional tests, the changes in winds and pressure gradients throughout the Central Valley are largest in the afternoon (second and third rows in Figure \ref{fig:windSol_WindMapsRg}).  In the dry Coast Range test (Figure \ref{fig:windSol_WindMapsRg} (e)-(h)), both wind and pressure changes are largest in the northern Central Valley, where cyclonic flow develops around the northern Coast Range.  In the dry Central Valley test (Figure \ref{fig:windSol_WindMapsRg} (i)-(l)), the pressure gradient from the San Francisco Bay to the Central Valley increases dramatically at 14:00, and these increases persist at 18:00 and to a lesser degree at 00:00. However, at 18:00, the zone of steepest pressure change has been pushed further eastward, and the strongest wind increases track this band of largest pressure gradient.  The pattern of wind increases at 00:00 is disorganized, and wind speeds decrease in the southern Central Valley at 06:00.  In the dry Sierra Nevada case (Figure \ref{fig:windSol_WindMapsRg} (m)-(p)), the pressure gradient strengthens moderately at 14:00 and 18:00, but pressure changes are minimal by 00:00 and 06:00.  Wind speeds increase through the Solano pass and the middle Central Valley in the afternoon (14:00 and 18:00), and by 18:00, the bands of largest wind increases have moved outward along Central Valley, again following zones of greatest pressure gradient increase.  Wind changes at night (00:00 and 06:00) are small and disorganized.
 
@@ -151,10 +149,10 @@ Next we investigate the physical mechanism by which changes in soil moisture, es
 The strong diurnal component of the Solano wind (Figures \ref{fig:windSol_TseriesDryRg} and \ref{fig:windSol_TseriesWetRg}) and the wind speed peak at low levels (Figure \ref{fig:windSol_VertProfileDryRg}) suggest significant forcing by land surface heating (consistent with Zhong \textit{et al.} [2004] and Mansbach [2010]).  In order to explore the influence of land surface forcing on terms in the momentum budget, we model the topographically channeled wind at Solano as simple one-dimensional flow through the pass governed by a one-dimensional momentum equation,
 
 \begin{equation}
-\frac{\partial u}{\partial t} = -u\frac{\partial u}{\partial x} -\frac{1}{\rho} \frac{\partial p}{\partial x} - F(\frac{\partial u}{\partial z}, N),
+\frac{\partial u}{\partial t} = -u\frac{\partial u}{\partial x} -\frac{1}{\rho} \frac{\partial p}{\partial x} - F\left(\frac{\partial u}{\partial z}, N\right),
 \label{eqn:windSol_momentum}
 \end{equation}
-neglecting Coriolis because of the topographic constraint on wind direction.  The first term on the right hand side is the advection of momentum, the second term is the pressure gradient force, and the third term is frictional dissipation as an unspecified function of vertical wind shear and stability (quantified by $N$, the Brunt-V\"ais\"al\"a frequency).  We are interested in the importance of each of these terms through the diurnal cycle and in the influence of soil moisture changes on each of these terms.
+neglecting the Coriolis term because of the topographic constraint on wind direction.  The first term on the right hand side is the advection of momentum, the second term is the pressure gradient force, and the third term is frictional dissipation as an unspecified function of vertical wind shear and stability (quantified by $N$, the Brunt-V\"ais\"al\"a frequency).  We are interested in the importance of each of these terms through the diurnal cycle and in the influence of soil moisture changes on each of these terms.
 
 \subsubsection{Driving pressure gradient}
 
@@ -170,7 +168,7 @@ neglecting Coriolis because of the topographic constraint on wind direction.  Th
 \label{fig:windSol_CorrMap0pt1}
 \end{figure}
 
-In order to identify the pressure gradient most relevant to Solano winds, we linearly regress the horizontal pressure anomaly against Solano turbine-level wind (Section \ref{subsec:WindPresRegression}).  The regression is repeated for pressure at a range of heights and for a range of lag times, with wind lagging pressure.  The regression slopes and correlation coefficients for the control cases (CA-0.25, Figure \ref{fig:windSol_CorrMap0pt25}, and CA-0.1, Figure \ref{fig:windSol_CorrMap0pt1}) show a consistent pattern of positive slopes and correlation coefficients over the ocean near the central coast (meaning higher pressure in those regions corresponds to faster wind), and negative slopes and correlation coefficients throughout the Central Valley, especially just north and south of the Solano pass (meaning lower pressure in those regions corresponds to faster wind).
+In order to identify the pressure gradient most relevant to Solano winds, we linearly regress the horizontal pressure anomaly, calculated at each output time step, against Solano turbine-level wind.  The regression is repeated for pressure at a range of heights and for a range of lag times, with wind lagging pressure.  The regression slopes and correlation coefficients for the control cases (CA-0.25, Figure \ref{fig:windSol_CorrMap0pt25}, and CA-0.1, Figure \ref{fig:windSol_CorrMap0pt1}) show a consistent pattern of positive slopes and correlation coefficients over the ocean near the central coast (meaning higher pressure in those regions corresponds to faster wind), and negative slopes and correlation coefficients throughout the Central Valley, especially just north and south of the Solano pass (meaning lower pressure in those regions corresponds to faster wind).
 
 \begin{figure}[here]
 \includegraphics[width=1\textwidth]{ch3-wind/img/pgrad_wind_CA0pt1_level110.png}
@@ -184,7 +182,7 @@ In order to identify the pressure gradient most relevant to Solano winds, we lin
 \label{fig:windSol_LagCorrCtrl}
 \end{figure}
 
-Thus, we choose three boxes, shown in gray in Figures \ref{fig:windSol_CorrMap0pt25} to \ref{fig:windSol_CorrMap0pt1}, to represent the pressure gradient driving Solano winds.  The lag of wind speed behind pressure gradient is evident in the time series of Solano wind and pressure difference between the boxes (Figure \ref{fig:windSol_PgradWind}).  Not only does the pressure difference peak 5-6 hours before the Solano wind speed, but the peak pressure difference rapidly dissipates (beginning to decline after 1-2 hours), while the peak wind speed persists for 6-8 hours.  Using the pressure difference between the three boxes, we confirm that the peak sensitivity (as measured by the regression slope) and correlation occur with pressure at 110 m ASL (although the metrics are high at all levels below $\sim$300 m) with a lag of $\sim$4-5 hr for NCV-OCN pressure and $\sim$5-6.5 hr for SCV-OCN pressure (Figure \ref{fig:windSol_LagCorrCtrl}).
+Based on this finding, we choose three boxes, shown in gray in Figures \ref{fig:windSol_CorrMap0pt25} to \ref{fig:windSol_CorrMap0pt1}, to represent the pressure gradient driving Solano winds.  The lag of wind speed behind pressure gradient is evident in the time series of Solano wind and pressure difference between the boxes (Figure \ref{fig:windSol_PgradWind}).  Not only does the pressure difference peak 5-6 hours before the Solano wind speed, but the peak pressure difference rapidly dissipates (beginning to decline after 1-2 hours), while the peak wind speed persists for 6-8 hours.  Using the pressure difference between the three boxes, we confirm that the peak sensitivity (as measured by the regression slope) and correlation occur with pressure at 110 m ASL (although the metrics are high at all levels below $\sim$300 m) with a lag of $\sim$4-5 hr for NCV-OCN pressure and $\sim$5-6.5 hr for SCV-OCN pressure (Figure \ref{fig:windSol_LagCorrCtrl}).
 
 \begin{figure}[here]
 \begin{subfigure}{0.6\textwidth}
@@ -244,7 +242,7 @@ The diurnal variations in low-level pressure correspond to diurnal variations in
 \label{fig:windSol_TimeHeightDryCV}
 \end{figure}
 
-Changes in soil moisture affect the pressure gradient by changing surface heat fluxes and thus air temperature.  Temperature changes in the lower 1000 m of the NCV box are much larger in the dryCV case than in the dryCR or drySN cases; as such, only the dryCV case is shown (Figure \ref{fig:windSol_TimeHeightDryCV}).  We briefly note that in the dryCR and drySN cases, temperature and pressure changes are much smaller (+/- 1 degree C and -0.4 hPa), and the pressure gradient strengthens in the late afternoon, largely corresponding to warming at boundary layer levels above the surface (150 m to 1200 m).
+Changes in soil moisture affect the pressure gradient by changing surface heat fluxes and thus air temperature.  Temperature changes in the lower 1000 m of the NCV box are much larger in the dryCV case than in the dryCR or drySN cases; as such, only the dryCV case is shown (Figure \ref{fig:windSol_TimeHeightDryCV}).  We note that in the dryCR and drySN cases, temperature and pressure changes are much smaller (+/- 1 degree C and -0.4 hPa), and the pressure gradient strengthens in the late afternoon, largely corresponding to warming at boundary layer levels above the surface (150 m to 1200 m).
 
 In the dryCV case, the NCV experiences strong low-level heating beginning in the morning, increasing in altitude as the boundary layer grows; temperature increases during day are well-mixed in the boundary layer.  There is mild cooling over the OCN box at 200-330 m in the first week of the simulation.  The strongest increase in temperature difference (warming of NCV relative to OCN) occurs late morning to late afternoon, at all levels below 690 m.  At night, there is a small decrease in the low-level (\textless 330 m) temperature difference.  The corresponding strengthening of the pressure difference is also greatest from late morning to late afternoon.  The mild strengthening of the pressure gradient on some nights (e.g. early morning of June 28, June 29, July 3, July 8) appears related to longer nocturnal persistence of warming at NCV relative to OCN in the residual boundary layer (150 m - 690 m, although the elevation of warming differs among individual days).
 
@@ -256,7 +254,7 @@ In the dryCV case, the NCV experiences strong low-level heating beginning in the
 \label{fig:windSol_MomTermsDiurn}
 \end{figure}
 
-The momentum advection, pressure gradient, and $u$ time tendency terms in Equation \ref{eqn:windSol_momentum} are estimated from model output for the CA-0.25 control (Figure \ref{fig:windSol_MomTermsDiurn}).  Using these three model-derived terms, we calculate the friction term as the residual (Figure \ref{fig:windSol_MomTermsDiurn}, cyan line).  The friction term has to vary diurnally in order to reproduce the observed wind diurnal cycle.  The time tendency ($\frac{\partial u}{\partial t}$) term is much smaller than pressure gradient term, even in afternoon when the pressure gradient is largest and advection is small.  If friction were not also large at this time, the wind would accelerate much faster.  Conversely, high wind speeds persist even after the pressure gradient declines between 22:00 and 04:00, even with strong advection of lower momentum air.  If friction during the night remained at its high afternoon values, the winds would decelerate at night.  The decline in the friction term at night is necessary in order to explain the observed high winds at night.  [\textbf{cite LLJ paper of some sort - not the first time this is being said.}]  Moreover, this residual has the expected diurnal shape of friction, with high values in the daytime when convective turbulence creates a uniform boundary layer and high momentum flux to the ground, and low values at night when the residual upper boundary layer decouples from the shallow stable nocturnal boundary layer and is buffered from friction with the surface.
+The momentum advection, pressure gradient, and $u$ time tendency terms in Equation \ref{eqn:windSol_momentum} are estimated from model output for the CA-0.25 control (Figure \ref{fig:windSol_MomTermsDiurn}).  Using these three model-derived terms, we calculate the friction term as the residual (Figure \ref{fig:windSol_MomTermsDiurn}, cyan line).  The friction term has to vary diurnally in order to reproduce the observed wind diurnal cycle.  The time tendency ($\frac{\partial u}{\partial t}$) term is much smaller than pressure gradient term, even in afternoon when the pressure gradient is largest and advection is small.  If friction were not also large at this time, the wind would accelerate much faster.  Conversely, high wind speeds persist even after the pressure gradient declines between 22:00 and 04:00 and despite the strong advection of lower momentum air.  If friction during the night remained at its high afternoon values, the winds would decelerate at night.  The decline in the friction term at night is necessary in order to explain the observed high winds at night.  [\textbf{cite LLJ paper of some sort - not the first time this is being said.}]  Moreover, this residual has the expected diurnal shape of friction, with high values in the daytime when convective turbulence creates a uniform boundary layer and high momentum flux to the ground, and low values at night when the residual upper boundary layer decouples from the shallow stable nocturnal boundary layer and is buffered from friction with the surface.
 % Indeed, the diurnal course of modeled $u*$ at Solano has the same timing as the $F(\frac{\partial u}{\partial z}, N)$ term calculated from the residual (ustar figure).
 
 \begin{figure}[here]
