--- a/ch3-wind/tex/intro/intro.tex
+++ b/ch3-wind/tex/intro/intro.tex
@@ -18,9 +18,9 @@
 
 \section{Introduction}
 
-The previous chapter illustrated that changes in land surface heat fluxes, as mediated by plant stomatal dynamics, can change atmospheric boundary layer temperature and evaporative demand in California.  In this chapter, we investigate the effect of changes in land surface heat fluxes, controlled by modified soil moisture, on near-surface winds in California.  We focus on winds at a specific wind farm, the Solano Wind Project in the Sacramento-San Joaquin River Delta region of California.  A regional atmospheric model is used to test the sensitivity of Solano winds to different regions' soil moisture and to quantify the magnitude of the effect at different times of day across a range of soil moisture changes.  This study serves as a prototype for characterizing the importance of soil moisture information for wind forecasts at other wind farms.  We aim to demonstrate that accurate soil moisture information can improve wind forecasts.
+The previous chapter illustrated that changes in land surface heat fluxes, as mediated by plant stomatal dynamics, can change atmospheric boundary layer temperature and evaporative demand in California.  In this chapter, we investigate the effect of changes in land surface heat fluxes, controlled by modified soil moisture, on near-surface winds in California.  We focus on winds at a specific wind farm, the Solano Wind Project in the Sacramento-San Joaquin River Delta region of California.  A regional atmospheric model is used to test the sensitivity of Solano winds to different regions' soil moisture and to quantify the magnitude of the effect at different times of day across a range of soil moisture changes.  This study serves as a prototype for characterizing the importance of soil moisture information for wind forecasts at other wind farms.  We demonstrate that accurate soil moisture information can improve wind forecasts.
 
-Accurate wind forecasts can reduce the cost of integrating wind energy into the electric grid on a large scale.  In order to reduce CO$_2$ emissions to the degree necessary to avert dangerous climate change [IPCC, 2013], electric utilities will need to transition to non-fossil-fuel energy sources, including a large fraction of wind energy [Jacobson and Delucchi, 2011].  However, although wind energy has large peak generation potential, it is intermittent, and the instantaneous mismatch between wind generation and electric demand must be met with other generation.  In most utilities, allocations of conventional electric generation (coal, natural gas, hydroelectric, and nuclear) are made a day ahead, based on forecasted net demand (demand minus wind and solar supply).  At shorter lead times (hour-ahead to real-time), imbalances between the day-ahead allocations of conventional generation and the actual net demand must be met with, in the case of a shortfall, more expensive quick-startup generation, or in the case of excess generation, wasted energy resources.  These imbalance costs add significantly to the cost of wind energy (around 10\% of a wind generator's income in a liberalized market [Fabbri \textit{et al.}, 2005]).  Improved accuracy of wind forecasts could reduce imbalance costs, making integration of wind into the electric grid more economically feasible: wind and solar forecasting could reduce energy costs by \$0.01 to \$0.02 per kWh at 30\% wind and solar penetration [GE Energy, 2010], or 8-15\% of the average US cost of electricity (\$0.13/kWh in July 2014 [EIA, 2014]); and at high wind penetration, \$68 million to \$160 million could be saved annually in California using current state of the art forecasting, with an opportunity to save \$19 million to \$38 million more with forecast accuracy improvements [Porter and Rogers, 2010].
+Accurate wind forecasts can reduce the cost of integrating wind energy into the electric grid on a large scale.  In order to reduce CO$_2$ emissions to the degree necessary to avert dangerous climate change [IPCC, 2013], electric utilities will need to transition to non-fossil-fuel energy sources, including a large fraction of wind energy [Jacobson and Delucchi, 2011].  However, although wind energy has large peak generation potential, it is intermittent, and the instantaneous mismatch between wind generation and electric demand must be met with other generation.  In most utilities, allocations of conventional electric generation (coal, natural gas, hydroelectric, and nuclear) are made one day in advance, based on forecasted net demand (demand minus wind and solar supply).  At shorter lead times (hour-ahead to real-time), imbalances between the day-ahead allocations of conventional generation and the actual net demand must be met with, in the case of a shortfall, more expensive quick-startup generation, or in the case of excess generation, wasted energy resources.  These imbalance costs add significantly to the cost of wind energy (around 10\% of a wind generator's income in a liberalized market [Fabbri \textit{et al.}, 2005]).  Improved accuracy of wind forecasts could reduce imbalance costs, making integration of wind into the electric grid more economically feasible: wind and solar forecasting could reduce energy costs by \$0.01 to \$0.02 per kWh at 30\% wind and solar penetration [GE Energy, 2010], or 8-15\% of the average US cost of electricity (\$0.13/kWh in July 2014 [EIA, 2014]); and at high wind penetration, \$68 million to \$160 million could be saved annually in California using current state of the art forecasting, with an opportunity to save \$19 million to \$38 million more with forecast accuracy improvements [Porter and Rogers, 2010].
 
 The major wind forecasting companies in North America and Europe use numerical weather prediction (NWP) models to make their day-ahead forecasts, often in combination with statistical post-processing [Porter and Rogers, 2010; Foley \textit{et al.}, 2012; Monteiro \textit{et al.}, 2009].  NWP models simulate atmospheric wind speed, temperature, pressure, and humidity (among other variables) by solving the equations for conservation of momentum, mass, and energy, discretized in three spatial dimensions and in time.  Regional NWP models require boundary condition information at the lateral boundaries of the grid, as well as bottom boundary fluxes of energy, moisture, and momentum.  If the bottom boundary is land, these fluxes are usually calculated with a land surface model.  Wind energy forecasts are sensitive to NWP model resolution and physical parameterizations, especially planetary boundary layer (PBL) schemes [Draxl \textit{et al.}, 2014; Marjanovic \textit{et al.}, 2014]; the optimal PBL scheme depends in part on atmospheric stability conditions [Draxl \textit{et al.}, 2014; Marjanovic \textit{et al.}, 2014], and the optimal grid resolution depends largely on terrain complexity, with more complex terrain requiring higher resolution [Marjanovic \textit{et al.}, 2014, Carvalho \textit{et al.}, 2012].  Ensembles of NWP runs have been used to characterize a forecast probability distribution [Deppe \textit{et al.}, 2013; Pinson and Madsen, 2009].  Various model output statistics (MOS) algorithms incorporating historical observations have been shown to improve NWP forecasts in post-processing; in particular, machine learning algorithms such as directional multipoint linear regression [B\'edard \textit{et al.}, 2013], multiple linear regression [Ranaboldo \textit{et al.}, 2013], random forests, generalized linear models, gradient boosting, and support vector machines [Ellis \textit{et al.}, 2014; Ortiz-Garc\'ia \textit{et al.}, 2011], and neural networks [Kusiak \textit{et al.}, 2009] have shown promise.  The prediction of ramps (rapid increases or decreases in wind power) remains a challenge [Carcangiu \textit{et al.}, 2014; Ellis \textit{et al.}, 2014; Wharton \textit{et al.}, 2011].
 
