--- a/ch3-wind/tex/methods/methods.tex
+++ b/ch3-wind/tex/methods/methods.tex
@@ -20,11 +20,11 @@
 
 \section{Methods}
 
-The sensitivity of Solano wind forecasts to soil moisture is tested using experiments with a regional atmospheric model, the Weather Research and Forecasting (WRF) model.  The WRF model, described in detail in Skamarock et al. [2008], is a three-dimensional, non-hydrostatic regional atmospheric model with $\sigma$ vertical coordinates that follow the terrain near the surface and transition to horizontal at high altitude.  WRF solves the discretized equations for conservation of momentum, mass, energy, and scalars like water vapor, and it has a range of parameterization options for radiation, planetary boundary layer (PBL) turbulence, cloud microphysics, convection, bottom boundary fluxes of water vapor and heat, and lateral boundary forcing.  WRF has been used extensively in wind energy forecasting [CITATIONS], with generally good performance [CITATIONS].  Accuracy of WRF-forecasted turbine-level winds depends on \textit{(resolution, PBL scheme, lateral forcing, soil moisture **)} [CITATIONS].
+The sensitivity of Solano wind forecasts to soil moisture is tested using experiments with a regional atmospheric model, the Weather Research and Forecasting (WRF) model.  The WRF model, described in detail in Skamarock et al. [2008], is a three-dimensional, non-hydrostatic regional atmospheric model with terrain-following vertical coordinates.  WRF solves the discretized equations for conservation of momentum, mass, energy, and scalars like water vapor, and it has a range of parameterization options for radiation, turbulence treatment via planetary boundary layer (PBL) schemes or large-eddy simulation closures, cloud microphysics, convection, bottom boundary fluxes of water vapor and heat, and lateral boundary forcing.  WRF has been used extensively in wind energy forecasting [CITATIONS], with generally good performance [CITATIONS].  Accuracy of WRF-forecasted turbine-level winds depends on \textit{(resolution, PBL scheme, lateral forcing, soil moisture **)} [CITATIONS].
 
 \subsection{Model setup}
 
-We run WRF with two two-way-nested domains centered on the Solano wind farm (Figure \ref{fig:windSol_domainmap}); the domains are described in Table \ref{table:windSol_domains}.  The finest resolution presented here is 2.7 km; preliminary tests with a third finer grid (0.9 km) showed little change in the forecasted winds, similar to the results of Marjanovic \textit{et al.} [2014], who found little accuracy improvement with horizontal resolution below 2.7 km in their simple terrain case.  The domain has 45 vertical levels, with a minimum spacing of $\sim$30 m near the surface and a maximum spacing of \textbf{XX at the top of the model domain}; turbine-level (60-100 m) wind forecasts are not very sensitive to vertical resolution beyond about 40 levels [Marjanovic \textit{et al.}, 2014, and references therein].
+We run WRF with two nested domains centered on the Solano wind farm (Figure \ref{fig:windSol_domainmap}); the domains are described in Table \ref{table:windSol_domains}.  The use of two nests enables gradual down-scaling of the coarse lateral forcing to the high resolution needed to resolve flow over the Solano wind farm.  We adopt a conservative nesting grid ratio of 3:1; the outer grid forces the lateral boundaries of the inner grid, and the inner grid feeds back to the outer grid across the region where the two domains coincide [Skamarock et al., 2008].  The inner domain has a horizontal resolution of 2.7 km; preliminary tests with a third finer grid (0.9 km) showed little change in the forecasted winds, similar to the results of Marjanovic \textit{et al.} [2014], who found little accuracy improvement with horizontal resolution below 2.7 km in their simple terrain case.  The domain has 45 vertical levels, with a minimum spacing of $\sim$30 m near the surface and a maximum spacing of \textbf{XX at the top of the model domain}, interpolated quadratically by the log of pressure (the default WRF setting); turbine-level (60-100 m) wind forecasts are not very sensitive to vertical resolution beyond about 40 levels with this vertical interpolation scheme in WRF [Marjanovic \textit{et al.}, 2014, and references therein].
 
 \begin{figure}[here]
 \includegraphics[width=1\textwidth]{ch3-wind/img/domain_map.pdf}
@@ -70,7 +70,7 @@ Scalar advection & Positive definite \\
 Lateral boundary & 5 grid points \\
 \hline
 \end{tabular}
-\caption{WRF parameterization options.  See Skamarock \textit{et al.} [2008] for description of schemes.}
+\caption{WRF parameterization options.  All options, except the PBL scheme, are the default settings in WRF.  See Skamarock \textit{et al.} [2008] for description of schemes.}
 \label{table:windSol_paramschemes}
 \end{table}
 
@@ -122,16 +122,5 @@ CV0.35 & 0.2 & Central Valley & 0.35 \\
 \caption{Model experiments}
 \label{table:windSol_runlist}
 \end{table}
-
-\subsection{Model output analysis: Wind -- pressure-anomaly regression maps}
-\label{subsec:WindPresRegression}
-
-The relationship between pressure spatial patterns and Solano turbine-level wind is quantified using linear regression.  At each output time $t$, the pressure anomaly at grid point $(i,j)$ and vertical level $k$ is calculated as
-
-\begin{equation}
-p'_{i,j,k,t} = p_{i,j,k,t} - \overline{p_{k,t}},
-\end{equation}
-
-where $\overline{p_{k,t}}$ is the horizontally averaged pressure at level $k$ and time $t$.  The time series of pressure anomalies at each grid point is linearly regressed against the time series of turbine-height Solano wind, and the regression slopes and correlation coefficients for all grid points at a given level are mapped.  The same procedure is conducted for the difference in pressure anomalies and wind speed between model test runs and control runs.
 
 %\end{document}
