--- a/thesis.tex
+++ b/thesis.tex
@@ -47,6 +47,7 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \DeclareMathOperator*{\argmin}{argmin}
+\PassOptionsToPackage{hyphens}{url}\usepackage{hyperref}
 
 \makeatletter
 \let\@currsize\normalsize
@@ -96,7 +97,10 @@ This dissertation was typeset using the
 \end{acknowledgements}
 \end{frontmatter}
 
-\include{ch0-introduction/document}
+\linespread{1.6}\selectfont
+
+%\include{ch0-introduction/document}
+\include{ch1-sapflow/document}
 \include{ch2-BL/document}
 %\include{ch3-wind/document}
 \bibliography{thesis}{}
